[tool.poetry]
name = "pitch-visualizer-plus"
version = "0.1.0"
description = "A api version of gaotiantian's pitch visualizer"
authors = ["zimolab <zimolab@aliyun.com>"]
license = "Apache-2.0 license"
readme = "README-PLUS.md"

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = ">=3.6.0"
numpy = "^1.26.4"
tqdm = "praat-parselmouth==0.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
