[tool.poetry]
name = "pitch-visualizer-plus"
version = "0.1.0"
description = "A api version of gaotiantian's pitch visualizer"
authors = ["zimolab <zimolab@aliyun.com>"]
license = "Apache-2.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9, <3.13.0"
matplotlib = ">=3.6.0"
numpy = "^1.26.4"
praat-parselmouth = "0.4.3"
tqdm = "^4.66.4"



[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
